# geog-414

./: pyproject.toml
book/labs/: lab_01.ipynb  lab_02.ipynb  lab_03.ipynb  lab_04.ipynb  lab_05.ipynb  lab_06.ipynb  lab_07.ipynb
